--- a/sample.yaml
+++ b/sample.yaml
@@ -1,9 +1,11 @@
-name: "OEIS-4M-Test"
+name: "Llama (Testing)"
 overwrite: true
 data:
   input_file: "train.jsonl"
   # Optional validation file
   validation_file: "val.jsonl"
+  # Optional external tokenizer path
+  tokenizer_path: "tokenizer"  # Path to a directory containing tokenizer.json
   preprocessing:
     max_context_size: 1024
     chunk_overlap: 0  # If > 0, chunks will overlap by this many tokens
@@ -21,9 +23,9 @@ data:
 model:
   architecture: "llama"
   dimensions:
-    hidden_size: 192
-    intermediate_size: 768  # 384 * 4
-    num_layers: 8
+    hidden_size: 128
+    intermediate_size: 256  # 384 * 4
+    num_layers: 4
   attention:
     num_heads: 8
     num_kv_heads: null  # If null, equals num_heads
@@ -42,13 +44,12 @@ model:
 
 training:
   # Number of epochs to train for (optional)
-  epochs: 10
-  
+  #epochs: 1
   hyperparameters:
     batch_size: 16
     learning_rate: 2.0e-2
     weight_decay: 0.01
-    # iters: 10000  # If epochs is provided, this is ignored
+    iters: 10000  # If epochs is provided, this is ignored
     
   scheduler:
     type: "cosine"  # Options: linear, cosine, cosine_with_warmup
@@ -62,7 +63,7 @@ logging:
   checkpoint_dir: "checkpoints"
   steps:
     logging_interval: 1
-    checkpoint_interval: 10000
+    checkpoint_interval: 1000
     validation_interval: 1000  # Run validation every 1000 steps (0 to disable)
   metrics:
     log_loss: true
