--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "matplotlib==3.10.1",
     "mlx==0.25.0",
     "mlx_lm==0.23.2",
+    "mlx_vlm",
     "mlx_optimizers==0.4.1",
     "numpy==2.2.5",
     "PyYAML==6.0.2",
